# Schedulo_AI_powered_TimeTable_Generator

./: .env.local.example  .gitattributes  .gitignore  Dockerfile.frontend.local  Dockerfile.local  Makefile  README.md  Room_Dataset (1).csv  Room_Dataset.csv  Student_Sections_DATASET.csv  Subjects_Dataset.csv  Teachers_Dataset.csv  alembic.ini  app.py  chronoai.db  course_dataset_final.csv  desktop.ini  docker-compose.local.yml  faculty_dataset_final.csv  pyproject.toml  render.yaml  requirements.dev.txt  requirements.local.txt  run.py  run_local.bat  run_local.sh  task.md  timetable_app.py  timetable_generator.py
.devcontainer/: devcontainer.json
alembic/: env.py
chronoai/: __init__.py  config.py  database.py  main.py  models.py
chronoai/ai_agents/: __init__.py  chatbot_modification_agent.py  conflict_resolution_agent.py  constraint_analysis_agent.py  data_ingestion_agent.py  orchestrator.py  quality_audit_agent.py  scheduler_agent.py
chronoai/analytics_dashboard/: __init__.py  metrics.py
chronoai/api_gateway/: __init__.py
chronoai/chatbot_service/: __init__.py  llm_client.py
chronoai/conflict_detector/: __init__.py  detector.py
chronoai/constraint_engine/: __init__.py  base.py  (+2 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ml_models/: README.md  __init__.py
schedulo/: __init__.py  config.py  database.py  main.py  models.py  tasks.py
scripts/: clean_subjects_table.py  generate_timetable.py  migrate_room_ids.py  seed_from_csvs.py
tests/: __init__.py  conftest.py
(+87 files in other folders)
